--- a/example/index.html
+++ b/example/index.html
@@ -11,16 +11,30 @@
       .start-color,
       .end-color {
         display: flex;
+        box-sizing: border-box;
+      }
+
+      body {
+        margin: 0;
+        font: bold 90px 'Helvetica Neue', Helvetica, sans-serif;
+      }
+      .start-color {
         align-items: center;
         justify-content: center;
-        box-sizing: border-box;
-        width: 100%;
-        height: 50vh;
-      }
-      .end-color-one,
-      .end-color-two {
-        width: 50%;
+        position: absolute;
+        top: 0;
+        right: 0;
+        width: 40%;
         height: 100%;
+        text-align: center;
+        border: 30px solid black;
+        background: black;
+      }
+      .end-color {
+        width: 60%;
+        height: 100vh;
+        text-align: left;
+        padding: 80px;
       }
     </style>
   </head>
@@ -32,8 +46,9 @@
         class="start-color__input">
     </div>
     <div class="end-color">
-      <div class="end-color-one"></div>
-      <div class="end-color-two"></div>
+      <div class="end-color-text">
+        Look Ma' no hands
+      </div>
     </div>
     <script src="../bundle/spin.js"></script>
     <script src="./example.js"></script>
