--- a/example/index.html
+++ b/example/index.html
@@ -27,7 +27,6 @@
         width: 40%;
         height: 100%;
         text-align: center;
-        border: 30px solid black;
         background: black;
       }
       .end-color {
@@ -42,7 +41,7 @@
     <div class="start-color">
       <input
         type="color"
-        value="#ab5e5a"
+        value="#9cc5d7"
         class="start-color__input">
     </div>
     <div class="end-color">
